Added Create-Rule Page

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,17 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+<style>
+  .custom-input > p-calendar .ui-calendar > .ui-inputtext{
+                        width:380px !important;
+                        margin-top: 8px !important;
+                        margin-bottom: 8px !important;
+        }
+
+
+
+        </style>
 </body>
 </html>
